[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/player_frames.png" type="Texture" id=1]
[ext_resource path="res://assets/queen_frames.png" type="Texture" id=2]
[ext_resource path="res://scripts/briefing.gd" type="Script" id=3]
[ext_resource path="res://assets/hack_dynamic_font.tres" type="DynamicFont" id=4]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 700, 600, 350, 300 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 350, 300 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 300, 350, 300 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 600, 350, 300 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 600, 350, 300 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 600, 350, 300 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 0, 350, 300 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 700, 0, 350, 300 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 300, 350, 300 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "tilt",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "antenna",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "arms",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "blink",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "mandibles",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=1]
0/name = "player_frames.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -7, -2, 1147, 940 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 350, 300 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 600, 500, 600 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 500, 600 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 600, 500, 600 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 500, 600 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 1200, 500, 600 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 500, 600 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 500, 600 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 500, 600 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 600, 500, 600 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "tilt",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "antenna",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "arms",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "blink",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "mandibles",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=12]
0/name = "queen_frames.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -4, 0, 1527, 1816 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 500, 600 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Node2D" type="Node2D"]
position = Vector2( 1446.01, 309.591 )
script = ExtResource( 3 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( -7.55103, -132.142 )
frames = SubResource( 11 )
animation = "tilt"

[node name="PlayerTimer" type="Timer" parent="Player"]
wait_time = 0.2

[node name="PlayerTileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 350, 300 )
format = 1

[node name="Queen" type="AnimatedSprite" parent="."]
position = Vector2( -1142.41, -3.07501 )
frames = SubResource( 22 )
animation = "arms"

[node name="QueenTimer" type="Timer" parent="Queen"]
wait_time = 0.2

[node name="QueenTileMap" type="TileMap" parent="."]
position = Vector2( 0, 2.37842 )
tile_set = SubResource( 12 )
format = 1

[node name="PlayerRichTextLabel" type="RichTextLabel" parent="."]
margin_left = -338.478
margin_top = 59.5804
margin_right = 257.522
margin_bottom = 335.58
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueenRichTextLabel" type="RichTextLabel" parent="."]
margin_left = -876.0
margin_top = -293.0
margin_right = -328.0
margin_bottom = -89.0
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -478.609, 240.272 )
scale = Vector2( 0.935393, 0.983914 )
z_index = -1
color = Color( 0.219608, 0.239216, 0.207843, 1 )
offset = Vector2( 243.75, -261.008 )
polygon = PoolVector2Array( -1230.83, -277.418, -671.663, -289.383, -682.45, 324.251, -1227.23, 312.286 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( 664.206, 241.953 )
scale = Vector2( 0.935393, 0.983914 )
z_index = -1
color = Color( 0.219608, 0.239216, 0.207843, 1 )
offset = Vector2( 243.75, -261.008 )
polygon = PoolVector2Array( -1180.48, -270.581, -714.813, -262.035, -689.642, 21.7072, -1151.72, 47.3466 )

[node name="SpeechTimer" type="Timer" parent="."]

[connection signal="timeout" from="Player/PlayerTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Player/PlayerTimer" to="." method="_on_PlayerTimer_timeout"]
[connection signal="timeout" from="Queen/QueenTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Queen/QueenTimer" to="." method="_on_QueenTimer_timeout"]
[connection signal="timeout" from="SpeechTimer" to="." method="_on_SpeechTimer_timeout"]
